--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       position: relative;
       width: 300px;
       height: 600px;
-      background: url('https://i.imgur.com/6XyP2c4.png') no-repeat center center;
+      background: url('<img src="https://i.ibb.co/NdSt9dR6/phone-035.jpg" alt="phone-035" border="0">') no-repeat center center;
       background-size: contain;
       padding: 70px 20px;
       box-shadow: 0 20px 50px rgba(0, 0, 0, 0.5);
