--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       height: 550px;
       background: url('https://i.ibb.co/tMD1LPnf/phone-037.png') no-repeat center center;
       background-size: contain;
+      background-color: transparent;
       padding: 65px 15px;
       box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
       border-radius: 50px;
