--- a/index.html
+++ b/index.html
@@ -34,9 +34,13 @@
     }
 
     .whatsapp-screen {
-      background-color: #ece5dd;
-      /* height: 100%; */
-      /* height: calc(100% + 43px); */
+      /* background-color: #ece5dd; */
+      /* background: url('./background.jpg'); */
+      background: url('./background.jpeg');
+      background-repeat: repeat;
+      /* background-size: auto; */
+      background-size: contain;
+
       height: calc(100% + 95px);
       /* Aumenta a altura */
       width: calc(100% - 9px);
@@ -147,7 +151,8 @@
     }
 
     .contact-name {
-      font-weight: bold;
+      /* font-weight: bold; */
+      font-weight: regular;
     }
 
     .online-status {
