--- a/index.html
+++ b/index.html
@@ -414,6 +414,7 @@
 
             setInitialMessageTime();
           } else {
+            console.log('Login falhou:', response.data);
             alert('Usuário ou senha incorretos.');
           }
 
